lonley ahh plot

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -1188,7 +1188,7 @@ plt.tight_layout()
 plt.show()
         </code></pre>
   </div>
-  <div class="container blog main gray">
+  <div class="container blog main">
         <img src="clarity/images/LabelDistribution.png" alt="LabelDistribution Distribution Bar Graph">
         
         <p class="text">
