added plots for correlation heatmap and projections in slideshow format

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -1789,6 +1789,44 @@ plot_unique_label_spectrograms_grid(df)
     </details>
   </div>
 
+  <div class="container blog main gray">
+    <h3 style="text-align: center;">Correlation/Tsne/PCA/Umap</h3>
+    <div class="slide-display">
+      <div class="slide-menu">
+        <ul class="dots" id="slide-menu">
+          <li class="dot active"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+        </ul>
+      </div>
+
+      <div class="slide-content" , style="display: block;">
+        <img src="clarity/images/correlation_heatmap.png" alt="Correlation Heatmap">
+      </div>
+
+      <div class="slide-content" , style="display: none;">
+        <img src="clarity/images/tsne_projection.png" alt="TSNE Projection">
+      </div>
+
+      <div class="slide-content" , style="display: none;">
+        <img src="clarity/images/pca_projection.png" alt="PCA Projection">
+      </div>
+
+      <div class="slide-content" , style="display: none;">
+      <img src="clarity/images/umap_projection.png" alt="UMAP Projection">
+    </div>
+
+
+      <p class="caption">
+        <span style="font-weight: bold">Figure 1:</span> Correlation heatmap of MFCCs and Pitch Variance. <br>
+        <span style="font-weight: bold">Figure 2:</span> t-SNE projection of audio features. <br>
+        <span style="font-weight: bold">Figure 3:</span> PCA projection of audio features. <br>
+        <span style="font-weight: bold">Figure 4:</span> UMAP projection of audio features.
+      </p>
+    </div>
+  </div>
+
   <div class="container blog main">
     <h1>Feature Extraction & Hypothesis Testing</h1>
     <section style="font-family: sans-serif; line-height: 1.6;">
