--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -141,7 +141,6 @@
   </style>
 </head>
 
-<>
   <!-- Title Page -->
   <!-- Dark Theme Example: Change the background colour dark and change the following div "blog-title" into "blog-title white". -->
   <div class="container blog" id="first-content" style="background-color: #E0E4E6;">
@@ -1616,7 +1615,7 @@ plot_unique_label_spectrograms_grid(df)
   </div>
   </div>
   <div class="container blog main">
-    <h2>2D Projection Setup for Audio Data Visualization</h2>
+    <h2>Projection Setup for Audio Data Visualization</h2>
   
     <p class="text">
       To visualize complex audio data, we extract key features, specifically Mel Frequency Cepstral Coefficients (MFCCs) and Pitch Variance, from the audio samples. These features are chosen for their ability to encapsulate the essential characteristics of sound.
@@ -1679,7 +1678,7 @@ df = df.with_columns([
       </code></pre>
     </details>
   
-    <h3>Key Observations from 2D Projections</h3>
+    <h3>Key Observations from Projections</h3>
 
     <table class="data-table">
       <thead>
@@ -1907,6 +1906,7 @@ save_3d_plot(X_tsne, labels, "3D t-SNE Projection of Audio Features", "tsne_3d.h
           </ul>
         </div>
 
+        <!-- TODO: fix the legend -->
         <div class="slide-content", style="display: none;">
           <div class="plot-container">
             <h4>3D PCA</h4>
