fixed visibility of labelsfor 3d plots not working when switching between them in the slideshow

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -1895,8 +1895,8 @@ save_3d_plot(X_tsne, labels, "3D t-SNE Projection of Audio Features", "tsne_3d.h
     </div>
   </div>
   
-  <div class="container blog main gray">
-      <h3 style="text-align: center;">Correlation/Tsne/PCA/Umap (Dimensions = 3)</h3>
+  <div class="container blog large gray">
+      <h3 style="text-align: center;">Tsne/PCA/Umap (Dimensions = 3)</h3>
       <div class="slide-display">
         <div class="slide-menu">
           <ul class="dots" id="slide-menu">
@@ -1906,27 +1906,31 @@ save_3d_plot(X_tsne, labels, "3D t-SNE Projection of Audio Features", "tsne_3d.h
           </ul>
         </div>
 
-        <!-- TODO: fix the legend -->
-        <div class="slide-content", style="display: none;">
+        <div class="slide-content" style="display: block;">
+          <div class="plot-container">
+            <h4>3D t-SNE</h4>
+            <iframe src="clarity/images/tsne_3d.html"></iframe>
+          </div>
+        </div>
+
+        <div class="slide-content" style="display: block; zoom: 0.1%; visibility: hidden;">
           <div class="plot-container">
             <h4>3D PCA</h4>
             <iframe src="clarity/images/pca_3d.html"></iframe>
           </div>
         </div>
         
-        <div class="slide-content", style="display: none;">
+        <div class="slide-content" style="display: block; zoom: 0.1%; visibility: hidden;">
           <div class="plot-container">
             <h4>3D UMAP</h4>
             <iframe src="clarity/images/umap_3d.html"></iframe>
           </div>
         </div>
-
-        <div class="slide-content", style="display: none;">
-          <div class="plot-container">
-            <h4>3D t-SNE</h4>
-            <iframe src="clarity/images/tsne_3d.html"></iframe>
-          </div>
-        </div>
+        <p class="caption">
+          <span style="font-weight: bold">Figure 1:</span> 3d t-SNE projection of audio features. <br>
+          <span style="font-weight: bold">Figure 2:</span> 3d PCA projection of audio features. <br>
+          <span style="font-weight: bold">Figure 3:</span> 3d UMAP projection of audio features.
+        </p>
       </div>
   </div>
 
