fixed list formatting for label distribution

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -1388,17 +1388,17 @@ label_counts.describe()
   <p class="text">
     Consider the distribution of labels by participant above. We find the following:
   </p>
-  <ul style="padding: 2em; display: flex; flex-direction: column; gap: 1em;" class="text">
+  <ul style="padding-left: 20px; list-style-type: disc;" class="text">
     <li>
-      <p class="text">Label Distribution: The dataset contains a variety of labels, with "frustrated" and "delighted"
+      <p class="text"><span style="font-weight: bold">Label Distribution</span>: The dataset contains a variety of labels, with <code>"frustrated"</code> and <code>"delighted"</code>
         being the most common.</p>
     </li>
     <li>
-      <p class="text">Label Variety: Some participants exhibit a wide range of labels, while others are more
+      <p class="text"><span style="font-weight: bold">Label Variety</span>: Some participants exhibit a wide range of labels, while others are more
         consistent in their responses.</p>
     </li>
     <li>
-      <p class="text">Customized Approaches: The differences in label distribution across participants suggest that
+      <p class="text"><span style="font-weight: bold">Customized Approaches</span>: The differences in label distribution across participants suggest that
         personalized models might be more effective (depending on model type).</p>
     </li>
   </ul>
