--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -3718,6 +3718,10 @@ print(f"Balanced data shape: {balanced_df.shape}")
   <p class="text">
     Finally, confusion matrices and class-wise precision, recall, and F1 scores were computed to analyze performance across all classes. Results were visualized to reveal both the strengths and error modes of our models.
   </p>
+
+  <h2>K-Means Overview</h2>
+
+  
   
 </div>
 
